--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-grid-gallery": "^0.5.5",
+    "react-images": "^1.1.7",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-sticky-footer": "0.1.0-rc3"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
