--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
     "react": "^16.13.1",
+    "react-bnb-gallery": "^1.4.4",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-grid-gallery": "^0.5.5",
@@ -17,7 +18,8 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-sticky-footer": "0.1.0-rc3"
+    "react-sticky-footer": "0.1.0-rc3",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "predeploy": "npm run build",
